[gd_scene load_steps=17 format=3 uid="uid://c8tida4meiqxu"]

[ext_resource type="Script" path="res://script/level_select.gd" id="1_srwv1"]
[ext_resource type="FontFile" uid="uid://bys4fsq5x5ci6" path="res://style/BULKYPIX.TTF" id="2_1koq4"]
[ext_resource type="Texture2D" uid="uid://kv2rfxxbwein" path="res://asset/btn/btn_sheet.png" id="3_it27q"]
[ext_resource type="Theme" uid="uid://c2tpsish726dv" path="res://asset/btn/btn_themes.tres" id="3_q5ugj"]
[ext_resource type="Texture2D" uid="uid://dwb2ee5f5xow6" path="res://asset/btn/select_container.png" id="4_nj66u"]
[ext_resource type="Texture2D" uid="uid://5e1tastgl85p" path="res://asset/tiles/bintang.png" id="5_2unxh"]
[ext_resource type="AudioStream" uid="uid://c2xm1t42epvhv" path="res://asset/sound/sfx/btn3.mp3" id="7_ppps6"]
[ext_resource type="AudioStream" uid="uid://b4e158le2f2i6" path="res://asset/sound/sfx/btn8.mp3" id="8_bkjdh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2alo"]
bg_color = Color(0.458824, 0.643137, 0.611765, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gg5kl"]
texture = ExtResource("3_it27q")
region_rect = Rect2(1, 1, 30, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bpw3r"]
texture = ExtResource("3_it27q")
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ubpcl"]
texture = ExtResource("3_it27q")
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fms7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c00vq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s2ejv"]
atlas = ExtResource("4_nj66u")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cefy4"]
atlas = ExtResource("5_2unxh")
region = Rect2(0, 0, 128, 64)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srwv1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j2alo")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 45
text = "- Level Selection -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="Panel"]
layout_mode = 1
offset_right = 96.0
offset_bottom = 96.0
theme = ExtResource("3_q5ugj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_gg5kl")
theme_override_styles/hover = SubResource("StyleBoxTexture_bpw3r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ubpcl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fms7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c00vq")

[node name="level" type="Node" parent="Panel"]

[node name="level1" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -196.0
offset_right = -416.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "1"

[node name="locked" type="TextureRect" parent="Panel/level/level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel/level/level1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="level2" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -196.0
offset_right = -288.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "2"

[node name="locked" type="TextureRect" parent="Panel/level/level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level3" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -196.0
offset_right = -160.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "3"

[node name="locked" type="TextureRect" parent="Panel/level/level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level4" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -196.0
offset_right = -32.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "4"

[node name="locked" type="TextureRect" parent="Panel/level/level4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level4"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level5" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -196.0
offset_right = 128.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "5"

[node name="locked" type="TextureRect" parent="Panel/level/level5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level5"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level6" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -196.0
offset_right = 256.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "6"

[node name="locked" type="TextureRect" parent="Panel/level/level6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level6"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level7" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 288.0
offset_top = -196.0
offset_right = 384.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "7"

[node name="locked" type="TextureRect" parent="Panel/level/level7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level7"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level8" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 416.0
offset_top = -196.0
offset_right = 512.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "8"

[node name="locked" type="TextureRect" parent="Panel/level/level8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level8"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level9" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -68.0
offset_right = -416.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "9"

[node name="locked" type="TextureRect" parent="Panel/level/level9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level9"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level10" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -68.0
offset_right = -288.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "10"

[node name="locked" type="TextureRect" parent="Panel/level/level10"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level10"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level11" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -68.0
offset_right = -160.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "11"

[node name="locked" type="TextureRect" parent="Panel/level/level11"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level11"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level12" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -68.0
offset_right = -32.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "12"

[node name="locked" type="TextureRect" parent="Panel/level/level12"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level12"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level13" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -68.0
offset_right = 128.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "13"

[node name="locked" type="TextureRect" parent="Panel/level/level13"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level13"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level14" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -68.0
offset_right = 256.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "14"

[node name="locked" type="TextureRect" parent="Panel/level/level14"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level14"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level15" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 288.0
offset_top = -68.0
offset_right = 384.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "15"

[node name="locked" type="TextureRect" parent="Panel/level/level15"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level15"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level16" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 416.0
offset_top = -68.0
offset_right = 512.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "16"

[node name="locked" type="TextureRect" parent="Panel/level/level16"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level16"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level17" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 60.0
offset_right = -160.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "17"

[node name="locked" type="TextureRect" parent="Panel/level/level17"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level17"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level18" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 60.0
offset_right = -32.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "18"

[node name="locked" type="TextureRect" parent="Panel/level/level18"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level18"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level19" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 60.0
offset_right = 128.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "19"

[node name="locked" type="TextureRect" parent="Panel/level/level19"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level19"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="level20" type="Button" parent="Panel/level"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = 60.0
offset_right = 256.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 50
text = "20"

[node name="locked" type="TextureRect" parent="Panel/level/level20"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s2ejv")

[node name="Label" type="Label" parent="Panel/level/level20"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "PLAYED"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -104.0
offset_right = 128.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("2_1koq4")
theme_override_font_sizes/font_size = 45
text = "03 x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="b2" type="Sprite2D" parent="Panel/Label2"]
texture_filter = 1
position = Vector2(272, 16)
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_cefy4")
hframes = 2

[node name="btn_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ppps6")
bus = &"SFX"

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bkjdh")
volume_db = -5.0
bus = &"SFX"

[connection signal="mouse_entered" from="Panel/back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Panel/level/level1" to="." method="_on_level_1_mouse_entered"]
[connection signal="pressed" from="Panel/level/level1" to="." method="_on_level_1_pressed"]
